tests/src/frontend/syntax/invalid/lvalue_in_paren_expression.sk
fun main(): String {
  (y.!x)
}
